@@ -2,15 +2,19 @@ package com.xpert.security;
 
 import com.xpert.entity.Users;
 import com.xpert.repository.UserRepository;
-import jakarta.persistence.EntityNotFoundException;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.userdetails.User;
+
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
+
+
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -24,12 +28,13 @@ public class CustomUserDetailsService implements UserDetailsService {
         log.info("Authenticating user with email: {}", email);
 
         Users user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new EntityNotFoundException("User not found with email: " + email));
+        		.orElseThrow(() -> new UsernameNotFoundException("User not found with email: " + email));
 
-        return new User(
-                user.getEmail(),
-                user.getPasswordHash(),
-                Collections.emptyList() // can be mapped roles to authorities later if needed
-        );
+        return new org.springframework.security.core.userdetails.User(
+        	    user.getEmail(),
+        	    user.getPasswordHash(),
+        	    List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
+        	);
+
     }
 }
